@@ -2,17 +2,15 @@ package nuricanozturk.dev.k8shell.k8s;
 
 import io.kubernetes.client.openapi.ApiClient;
 import io.kubernetes.client.openapi.Configuration;
-import io.kubernetes.client.openapi.apis.CoreV1Api;
 import nuricanozturk.dev.k8shell.KubernetesData;
-import nuricanozturk.dev.k8shell.ShellPrinter;
-import nuricanozturk.dev.k8shell.ComponentProvider;
+import nuricanozturk.dev.k8shell.component.ComponentProvider;
 import nuricanozturk.dev.k8shell.config.PropertyService;
-import org.fusesource.jansi.Ansi;
+import nuricanozturk.dev.k8shell.exception.ItemNotFoundException;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationContext;
 import org.springframework.shell.component.SingleItemSelector;
 import org.springframework.shell.component.support.SelectorItem;
-import org.springframework.shell.context.InteractionMode;
 import org.springframework.shell.standard.AbstractShellComponent;
 import org.springframework.shell.standard.ShellComponent;
 import org.springframework.shell.standard.ShellMethod;
@@ -20,9 +18,7 @@ import org.springframework.shell.standard.ShellMethod;
 import java.io.File;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static nuricanozturk.dev.k8shell.config.KubernetesClientConfig.BEAN_API_CLIENT;
 
@@ -30,29 +26,20 @@ import static nuricanozturk.dev.k8shell.config.KubernetesClientConfig.BEAN_API_C
 public class ConfigurationFile extends AbstractShellComponent {
     private final PropertyService propertyService;
     private final ApplicationContext context;
-    private final CoreV1Api api;
-    private final ShellPrinter shellPrinter;
-    private final ComponentProvider componentProvider;
 
-    public ConfigurationFile(PropertyService propertyService, ApplicationContext context, CoreV1Api api, ShellPrinter shellPrinter, ComponentProvider componentProvider) {
+    @Value("${k8s-shell.config-path.dir}")
+    private String kubeDirPath;
+
+    public ConfigurationFile(final PropertyService propertyService, final ApplicationContext context) {
         this.propertyService = propertyService;
         this.context = context;
-        this.api = api;
-        this.shellPrinter = shellPrinter;
-        this.componentProvider = componentProvider;
     }
 
     @ShellMethod(key = {"sc", "set-config"}, value = "Change the configuration file")
-    public void changeConfigFile() {
-        final var kubeDir = new File(System.getProperty("user.home") + "/.kube");
-        final var configFiles = kubeDir.listFiles();
+    public void select() {
+        final var configFiles = getFilesInDir(kubeDirPath);
 
-        if (configFiles == null || configFiles.length == 0) {
-            System.out.println("No configuration files found in ~/.kube directory.");
-            return;
-        }
-
-        final var items = Arrays.stream(configFiles)
+        final var items = configFiles.stream()
                 .map(f -> SelectorItem.of(f.getName(), f.getAbsolutePath()))
                 .toList();
 
@@ -62,36 +49,28 @@ public class ConfigurationFile extends AbstractShellComponent {
                 .setTemplateExecutor(getTemplateExecutor())
                 .setItems(items)
                 .setMessage("Select a configuration file")
-                .setDefaultItem(null)
                 .setPrintResults(true)
                 .build();
 
         final var selectedPath = context.run(SingleItemSelector.SingleItemSelectorContext.empty())
-                .getResultItem().flatMap(si -> Optional.ofNullable(si.getItem())).orElseGet(() -> {
-                    shellPrinter.print("No pod selected.", Ansi.Color.RED);
-                    return null;
-                });
+                .getResultItem()
+                .flatMap(si -> Optional.ofNullable(si.getItem()))
+                .orElseThrow(() -> new ItemNotFoundException("No configuration file selected."));
 
         KubernetesData.getInstance().clearData();
-
-        propertyService.updateProperty(selectedPath);
+        propertyService.setConfigPath(selectedPath);
         KubernetesData.getInstance().setConfigPath(selectedPath);
 
         final var newClient = (ApiClient) this.context.getBean(BEAN_API_CLIENT);
         Configuration.setDefaultApiClient(newClient);
     }
 
-    @ShellMethod(key = {"change namespaces", "set-namespaces", "sn"}, value = "Change namespace")
-    public void changeNamespace() throws Exception {
-        final var namespaces = api.listNamespace().executeWithHttpInfo();
+    @ShellMethod(key = {"list-config", "cc"}, value = "Show the current configuration files in .kube directory")
+    public void list() {
+        final var configFiles = getFilesInDir(kubeDirPath);
 
-        if (namespaces.getData() == null) {
-            System.out.println("No namespaces found.");
-            return;
-        }
-
-        final var items = namespaces.getData().getItems().stream()
-                .map(n -> SelectorItem.of(Objects.requireNonNull(n.getMetadata()).getName(), n.getMetadata().getName()))
+        final var items = configFiles.stream()
+                .map(f -> SelectorItem.of(f.getName(), f.getAbsolutePath()))
                 .toList();
 
         final var context = new ComponentProvider.SingleSelectionBuilder<String>()
@@ -99,41 +78,21 @@ public class ConfigurationFile extends AbstractShellComponent {
                 .setResourceLoader(getResourceLoader())
                 .setTemplateExecutor(getTemplateExecutor())
                 .setItems(items)
-                .setMessage("Select Namespace")
-                .setDefaultItem(null)
-                .setPrintResults(false)
+                .setMessage("Configuration files")
+                .setPrintResults(true)
                 .build();
-        final var selectedNamespace = context.run(SingleItemSelector.SingleItemSelectorContext.empty())
-                .getResultItem().flatMap(si -> Optional.ofNullable(si.getItem())).orElseGet(() -> {
-                    System.out.println("No namespace selected.");
-                    return null;
-                });
 
-        KubernetesData.getInstance().setPod(null);
-        KubernetesData.getInstance().setSecret(null);
-        KubernetesData.getInstance().setService(null);
-        KubernetesData.getInstance().setDeployment(null);
-        KubernetesData.getInstance().setNamespace(selectedNamespace);
-
-        shellPrinter.printSuccess("Namespace selected: " + selectedNamespace);
+        context.run(SingleItemSelector.SingleItemSelectorContext.empty());
     }
 
-    @ShellMethod(key = {"ln", "list namespaces"}, interactionMode = InteractionMode.INTERACTIVE, value = "List namespaces")
-    public void listNamespaces() throws Exception {
-        final var namespaces = api.listNamespace().executeWithHttpInfo();
+    private List<File> getFilesInDir(final String dirPath) {
+        final var kubeDir = new File(dirPath);
+        final var configFiles = kubeDir.listFiles();
 
-        if (namespaces.getData() == null || namespaces.getData().getItems().isEmpty()) {
-            System.out.println("No namespaces found.");
+        if (configFiles == null || configFiles.length == 0) {
+            throw new ItemNotFoundException("No configuration files found. Please check your kube config directory!");
         }
 
-        final var items = namespaces.getData().getItems().stream()
-                .map(n -> new String[]{Objects.requireNonNull(n.getMetadata()).getName()})
-                .collect(Collectors.toList());
-
-
-        final var result = this.componentProvider.toTable(List.of("Namespaces"), items);
-
-        shellPrinter.printSuccess(result);
+        return Arrays.stream(configFiles).toList();
     }
-
 }
